--- a/src/main/resources/fxml/Borderless.fxml
+++ b/src/main/resources/fxml/Borderless.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
-
+<?import java.lang.String?>
 <AnchorPane prefHeight="391.0" prefWidth="565.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.micheljung.fxborderlessscene.borderless.BorderlessController">
    <children>
       <Region />
@@ -48,5 +50,35 @@
             <Cursor fx:constant="S_RESIZE" />
          </cursor>
       </Pane>
+      <HBox alignment="TOP_RIGHT" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
+         <children>
+
+            <Button fx:id="minimizeButton" focusTraversable="false" onAction="#onMinimizeButtonClicked">
+               <styleClass>
+                  <String fx:value="window-button"/>
+                  <String fx:value="minimize-button"/>
+               </styleClass>
+            </Button>
+            <Button fx:id="maximizeButton" focusTraversable="false" onAction="#onMaximiseButtonClicked">
+               <styleClass>
+                  <String fx:value="window-button"/>
+                  <String fx:value="maximize-button"/>
+               </styleClass>
+            </Button>
+            <Button fx:id="restoreButton" focusTraversable="false" onAction="#onRestoreButtonClicked">
+               <styleClass>
+                  <String fx:value="window-button"/>
+                  <String fx:value="restore-button"/>
+               </styleClass>
+            </Button>
+            <Button fx:id="closeButton" focusTraversable="false" onAction="#onCloseButtonClicked">
+               <styleClass>
+                  <String fx:value="window-button"/>
+                  <String fx:value="close-button"/>
+               </styleClass>
+            </Button>
+
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
