--- a/src/main/resources/fxml/Borderless.fxml
+++ b/src/main/resources/fxml/Borderless.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import java.lang.String?>
-<AnchorPane prefHeight="391.0" prefWidth="565.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.micheljung.fxborderlessscene.borderless.BorderlessController">
+<AnchorPane styleClass="borderless-window" prefHeight="391.0" prefWidth="565.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.micheljung.fxborderlessscene.borderless.BorderlessController">
    <children>
       <Region />
       <Pane fx:id="topLeftPane" prefHeight="10.0" prefWidth="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
