--- a/src/main/resources/fxml/undecorated.css
+++ b/src/main/resources/fxml/undecorated.css
@@ -1,6 +1,10 @@
 #backdrop {
   -fx-background-color: transparent;
-  -fx-padding: 4;
+  -fx-padding: 10;
+}
+
+#windowRoot {
+  -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0.1, 0, 0);
 }
 
 #backdrop:maximized {
